--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "element-plus": "^2.2.6",
     "lodash-es": "^4.17.21",
     "pinia": "^2.0.14",
+    "spark-md5": "^3.0.2",
     "vue": "^3.2.25",
     "vue-router": "^4.0.16"
   },
