--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.6",
@@ -19,6 +20,7 @@
     "vue-router": "^4.0.16"
   },
   "devDependencies": {
+    "@types/jest": "^28.1.4",
     "@types/lodash-es": "^4.17.6",
     "@types/node": "^18.0.0",
     "@vitejs/plugin-vue": "^2.3.3",
@@ -27,6 +29,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^28.1.2",
     "prettier": "^2.4.0",
     "sass": "^1.52.3",
     "typescript": "^4.5.4",
