--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "throwin-fe",
+  "name": "Uverse",
   "private": true,
   "version": "0.0.0",
+  "packageManager": "pnpm",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
